add staging path, interactions. edit legend.

--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,13 @@
   <responsive-child class="map-container">
     <div class="outmost">
       <section class="chatter">
-        <h1 class="graphic-hed">Lorem Ipsum</h1>
-        <p class="graphic-chatter">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consequat aliquam lectus vitae porttitor. Donec euismod sem dui, ac gravida sem mattis sed. Fusce porttitor accumsan sem elementum convallis. Nam id augue lobortis, laoreet magna non,
-          sodales risus.</p>
+        <h1 class="graphic-hed">Diversity in King County neighborhoods</h1>
       </section>
 
       <div class="aspect-ratio-outer">
           <aside class="legend">
-          <h2 class="legend-hed">Diversity index</h2>
+          <p class="legend__note legend__note--left">Less diverse</p>
+          <p class="legend__note legend__note--right">More diverse</p>
           <ul class="scale">
             <li>
               <div class="block" style="background-color: #f0f9e8"></div>
