--- a/src/index.html
+++ b/src/index.html
@@ -23,28 +23,29 @@
 
       <div class="aspect-ratio-outer">
           <aside class="legend">
+          <h3 class="legend-hed">Diversity index</h3>
           <p class="legend__note legend__note--left">Less diverse</p>
           <p class="legend__note legend__note--right">More diverse</p>
           <ul class="scale">
             <li>
               <div class="block" style="background-color: #f0f9e8"></div>
-                <p>0-37.2</p>
+                <p>0-38.9</p>
             </li><!--
          --><li>
               <span class="block" style="background-color: #bae4bc"></span>
-              <p>37.2-49.4</p>
+              <p>39-48.9</p>
             </li><!--
          --><li>
               <span class="block" style="background-color: #7bccc4"></span>
-              <p>49.4-59.2</p>
+              <p>49-58.9</p>
             </li><!--
          --><li>
               <span class="block" style="background-color: #43a2ca"></span>
-              <p>59.2-68.9</p>
+              <p>59-68.9</p>
             </li><!--
          --><li>
               <span class="block" style="background-color: #0868ac"></span>
-              <p>68.9-79</p>
+              <p>69-79</p>
             </li>
           </ul>
         </aside>
@@ -58,7 +59,7 @@
       </div>
 
       <div class="caption-container">
-        <div class="data-source">Source: Name of source</div>
+        <div class="data-source">Source: U.S. census</div>
         <div class="art-credit">Hilary Fung / The Seattle Times</div>
       </div>
   </responsive-child>
