add publishing metadata; year in data source

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="caption-container">
-        <div class="data-source">Source: U.S. census</div>
+        <div class="data-source">Source: U.S. census (2018)</div>
         <div class="art-credit">Hilary Fung / The Seattle Times</div>
       </div>
   </responsive-child>
